<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings">
        <SwitchPreference
            android:defaultValue="false"
            android:key="bgsampling"
            android:title="@string/settbg"/>
        <EditTextPreference
            android:defaultValue="15"
            android:dialogTitle="@string/settsamplingtime"
            android:key="sTime"
            android:summary="@string/settsamplingtime_summ"
            android:title="@string/settsamplingtime" />
        <EditTextPreference
            android:defaultValue="4"
            android:dialogTitle="@string/settmaxrecord"
            android:key="maxrecorddata"
            android:summary="@string/settmaxrecord_summ"
            android:title="@string/settmaxrecord" />
        <EditTextPreference
            android:defaultValue=""
            android:dialogTitle="@string/settssid"
            android:key="myssid"
            android:summary="@string/settssid_summ"
            android:title="@string/settssid" />
        <EditTextPreference
            android:defaultValue="7"
            android:dialogTitle="@string/settreport"
            android:key="daysreport"
            android:summary="@string/settreport_summ"
            android:title="@string/settreport" />
    </PreferenceCategory>
</PreferenceScreen>